<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/happy_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="40dp"
            android:text="@string/happy"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/sick_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sad_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sad_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="40dp"
            android:text="@string/sad"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/angry_button"
            app:layout_constraintEnd_toStartOf="@+id/happy_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/angry_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/angry"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/scared_button"
            app:layout_constraintEnd_toStartOf="@+id/sick_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sad_button" />

        <Button
            android:id="@+id/sick_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/sick"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/mischievous_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/angry_button"
            app:layout_constraintTop_toBottomOf="@+id/happy_button" />

        <Button
            android:id="@+id/scared_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/scared"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mischievous_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/angry_button" />

        <Button
            android:id="@+id/mischievous_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/mischievous"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scared_button"
            app:layout_constraintTop_toBottomOf="@+id/sick_button" />

        <Button
            android:id="@+id/summary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mischievous_button"
            app:layout_constraintStart_toEndOf="@+id/scared_button"
            app:layout_constraintTop_toBottomOf="@+id/scared_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>